2004-02-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Changes to validate cached contents.
	(w3m-follow-cache-control-header): Abolished.
	(w3m-prefer-cache): New option.
	(w3m-cache-available-p): Check whether a cached header includes
	cache control headers.
	(w3m-w3m-dump-extra): Always cache both a header and a content.
	(w3m-w3m-retrieve-1): Check whether a cache is available, before
	using it.
	(w3m-view-this-url): When visiting history pages, prefer cached
	contents without checking their validity.
	(w3m-view-previous-page, w3m-view-source, w3m-view-header):
	Prefer cached contents without checking their validity.

2004-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-show-error-information): Decode cache contents if
	necessary.

2004-02-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-edit-url): Define as a command.

2004-02-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-gnome.el (shimbun-get-headers): Removed last argument.

2004-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Exclude w3m-e22.el except
	for Emacs 22.

2004-01-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-edit-function-alist): New option.
	(w3m-edit-url): Refer the above alist to find a suitable function
	for editing a specified page.
	(w3m-edit-function, w3m-edit-current-url): Its docstring is
	modified to follow the above change.
	(w3m-edit-this-url): Its docstring is modified likewise, and it is
	simplified.
	(w3m-goto-url): Ignore cached form data when reloading.

	* shimbun/nnshimbun.el: Changes to make nnshimbun.el more robust.
	(nnshimbun-goto-url): Abolished.
	(gnus-summary-refer-shimbun-article): New command.
	(nnshimbun-setup-article-mode): Use the above command instead of
	the abolished one.

	* w3m.el (w3m-safe-view-this-url): Call `w3m-goto-url' when a
	function set to `w3m-goto-article-function' returns nil.

2004-01-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
